# xla-builder-rs

./: .gitignore  Cargo.toml  README.md
xla-builder/: Cargo.toml
xla-builder-sys/: .bazelrc  Cargo.toml  WORKSPACE  build.rs  wrapper.h
xla-builder-sys/rxla/: BUILD.bazel  xla_builder.cc  xla_builder.h
xla-builder/src/: builder.rs  lib.rs
